@@ -6,6 +6,7 @@ On the road for v0.4.6 (Nausicaa2)
 ===============================================================================
 
 2007-02-21  Gilles Dumortier <dgil at ieee.org>
+	* Stops view : Add a quote in other main market (SF bug 1664690)
 	* Sell/Buy from the matrix screen (SF bug 1454553)
 	* Start working on brokers / fees back-end
 	* remove itrade_wxmatrix module (replaced by wxpanes/wxbook)
